--- a/package.json
+++ b/package.json
@@ -6,11 +6,44 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.5",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.8",
+    "@mui/material-nextjs": "^6.1.8",
+    "@mui/x-date-pickers": "^7.22.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
     "next": "latest",
+    "postcss": "^8.4.49",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-day-picker": "^8.10.1",
+    "react-dom": "18.2.0",
+    "react-number-format": "^5.4.2",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.58.1",
+    "@types/node": "^22.9.3",
+    "@types/react": "^18.3.12",
+    "@types/tailwindcss": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^9.15.0",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2"
   }
 }
